# psp-raylib-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  nob.c
include/: pspBoilerplate.h  pspinit.h
raylib-install/: README.md
src/: main.c  main.cpp
